<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_manipulation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>

  <exec_depend>robot_skills</exec_depend>
  <exec_depend>robot_smach_states</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-markdown</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-markdown</exec_depend>
  <exec_depend>python-xhtml2pdf-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-imaging</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-imaging</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

</package>
