<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_navigation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>robot_skills</build_depend>
  <exec_depend>robot_skills</exec_depend>

  <build_depend>robot_smach_states</build_depend>
  <exec_depend>robot_smach_states</exec_depend>

</package>
