<?xml version="1.0"?>
<package>
  <name>challenge_open</name>
  <version>0.0.0</version>
  <description>The challenge_open package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>multirobot_communication</run_depend>

</package>
