<?xml version="1.0"?>
<package>
  <name>challenge_basic_functionalities</name>
  <version>1.0.0</version>
  <description>Person Recognition challenge from Robocup 2015 rulebook</description>

  <maintainer email="luisfferreira@outlook.com">Luis Ferreira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>psi</build_depend>
  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>speech_interpreter</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>psi</run_depend>
  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>speech_interpreter</run_depend>
  <run_depend>tf</run_depend>
</package>
