<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_person_recognition</name>
  <version>1.0.0</version>
  <description>Person Recognition challenge from Robocup 2016 rulebook</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>pykdl_ros</depend>
  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>
  <depend>rospy</depend>

</package>
